2010-04-10  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Add grub-probe support for NetBSD.

	* util/getroot.c (find_root_device): Convert block device to
	character device on NetBSD.
	* util/probe.c (probe): Require character device on NetBSD.
	* util/hostdisk.c: NetBSD specific headers.
	(configure_device_driver): new function to tune device driver
	parameters (currently only for NetBSD floppy driver).
	(grub_util_biosdisk_open): NetBSD specific code (get disk size
	via disklabel ioctl).
	(open_device): call configure_device_driver on NetBSD.
	(convert_system_partition_to_system_disk): NetBSD specific code.
	(device_is_wholedisk): Likewise.
	(grub_util_biosdisk_get_grub_dev): Likewise.
	(make_device_name): Fixed a typo in bsd_part_str.
	* configure.ac: check for opendisk() and getrawpartition() on
	NetBSD and set LIBUTIL.
	* Makefile.in: add LIBUTIL to LIBS.

2010-04-10  BVK Chaitanya  <bvk.groups@gmail.com>

	Documentation fix.

	* util/grub-script-check.c: Better help message.

2010-04-10  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix FreeBSD build.

	* configure.ac: Flex version check.
	* conf/common.rmk: Add -Wno-error to sh.mod.
	* script/yylex.l: Remove all #pragma.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/util/misc.h (canonicalise_file_name): Add missing
	prototype.
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot.c (GRUB_MOD_INIT) [GRUB_USE_MULTIBOOT2]:
	Rename "module" to "module2".
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/memory.h (grub_machine_mmap_iterate): Remove
	EXPORT_FUNC.
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* lib/posix_wrap/locale.h: Add missing file.
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	grub-emu module load support.

	* Makefile.in (TARGET_NO_MODULES): New variable. All users of